Convert 2020 to Java 17